Creando formulario para ingreso de datos usando ajax

--- a/sgim/templates/incidencias/nueva_incidencia.html
+++ b/sgim/templates/incidencias/nueva_incidencia.html
@@ -508,7 +508,7 @@ $("#enviar").on('click',  function(event) {
                 'servicios[]':get_selected_items(),
                 medio_notificacion: $("#id_medio_notificacion").val(),
                 tipo: $("#id_tipo").val(),
-                paro_operacion: $("#id_paro_operacion").is(':checked'),
+                paro_equipo: $("#id_paro_equipo").is(':checked'),
                 problema: $("#id_problema").val(),
                 urgencia: $("#id_urgencia").val(),
                 severidad: $("#id_severidad").val(),
