--- a/sgim/templates/inventario/dispositivo_detalle.html
+++ b/sgim/templates/inventario/dispositivo_detalle.html
@@ -44,7 +44,7 @@
 							    <div class="content">
 							      	<h3 class="ui dividing purple header">
 									  <i class="terminal icon"></i>
-									  <div class="content">
+									  <div class="content" style='font-size:18px'>
 									    {{dispositivo}}
 									  </div>
 									</h3>
