--- a/sgim/templates/mantto/nuevo_plan.html
+++ b/sgim/templates/mantto/nuevo_plan.html
@@ -235,7 +235,7 @@ $(document).ready(function() {
         .done(function(data) {
             
             if(data.success){
-                $.snackbar({content: "<i class='ion-android-checkmark-circle green icon'></i> La rutina fue alamcenada con exito!"});
+                $.snackbar({content: "<i class='ion-android-checkmark-circle green icon'></i> El plan fue alamcenado con exito!"});
                 document.getElementById("form").reset();
                 $(".form-control").jqxComboBox('clearSelection');
                 //$(".progress").css("visibility", "hidden")
