--- a/sgim/templates/mantto/planes.html
+++ b/sgim/templates/mantto/planes.html
@@ -29,7 +29,8 @@
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxgrid.pager.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxgrid.selection.js"></script> 
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxgrid.filter.js"></script> 
-  <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxgrid.edit.js"></script> 
+  <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxgrid.edit.js"></script>
+   <script type="text/javascript" src="{{BOWER_URL}}moment/min/moment.min.js"></script> 
  
 
 {% endblock include_statics %}
@@ -68,19 +69,33 @@
                           <p> Todas las acciones que tienen como objetivo mantener un artículo o restaurarlo a un estado en el cual pueda llevar a cabo alguna función requerida. Estas acciones incluyen la combinación de las acciones técnicas y administrativas correspondientes.
                            </p>
                         </div>
+
                       </div>
                     </div>
                   </div>
+
                 </div>
+
             </div>
 
-            <div id="jqxgrid"></div>
+            <div id="jqxgrid">
+            </div>
         </div>
     </div>
 </div>
 
-
-
+<div class="ui dimmer">
+    <div class="ui large text loader">
+      Espere por favor...
+    </div>
+</div>
+{% if user.is_staff %}
+  <div id='Menu'>
+        <ul>
+            <li id='menu1'>Cancelar Mantenimiento</li>
+        </ul>
+  </div>
+{% endif %}
 
 {% endblock contenido %}
 
@@ -112,41 +127,52 @@ $(document).ready(function() {
                     { name: 'fin_estimado', type: 'date' },
                     { name: 'inicio', type: 'date' },
                     { name: 'fin', type: 'date' },
-                    { name: 'estadoCode', value: 'estado', values: { source: estadoAdapter.records, value: 'id', name: 'nombre' } },
+                    { name: 'estado_string' },
                     { name: 'estado' },
                 ],
                 id: 'id',
-                url: '/api/mantto/planes/'
+                url: '/api/mantto/planes/',              
             };
-            var dataAdapter = new $.jqx.dataAdapter(source);
-    $("#jqxgrid").jqxGrid({
+      var dataAdapter = new $.jqx.dataAdapter(source);
+
+      function dateRender(row, columnfield, value, defaulthtml, columnproperties){
+        var data = $('#jqxgrid').jqxGrid('getrowdata', row);
+        if(value){
+          div = "<div style='padding:5px;'>"
+          return div + moment(value).format("DD-MM-YYYY HH:mm")+"</div>";
+        }
+      }
+
+      $("#jqxgrid").jqxGrid({
 
                 width: '100%',
                 theme:'metro', 
                 source: dataAdapter,
                 showfilterrow: true,
-                //editable:true,
+                altrows: true,
                 filterable: true,
                 pageable: true,               
-                selectedrowindex: 0,
                 autoshowfiltericon: true,
                 localization: getLocalization(),
                 columns: [
                   { text: 'Plan', datafield: 'rutina', width:"20%",editable: false },
                   { text: 'Inicio Previsto', datafield: 'inicio_estimado',filtertype:'date',   width:"16%", cellsformat:'dd-MM-yy H:mm',},
                   { text: 'Fin Previsto', datafield: 'fin_estimado', filtertype:'date' ,width:"16%", cellsformat:'dd-MM-yy H:mm',},
-                  { text: 'Inicio Real', datafield: 'inicio', filtertype:'date', width:"16%", cellsformat:'dd-MM-yy H:mm' },
-                  { text: 'Fin Real', datafield: 'fin', filtertype:'date', width:"16%", cellsformat:'dd-MM-yy H:mm' },
-                  { text: 'Estado', datafield: 'estado',   filtertype:'list', width:"16%"},
+                  { text: 'Inicio Real', datafield: 'inicio', filtertype:'date', width:"16%", cellsformat:'dd-MM-yy H:mm',cellsrenderer: dateRender
+                  },
+                  { text: 'Fin Real', datafield: 'fin', filtertype:'date', width:"16%", cellsformat:'dd-MM-yy H:mm', cellsrenderer: dateRender},
+                  { text: 'Estado', datafield: 'estado_string',   filtertype:'list', width:"16%"},
               ],
               showtoolbar: true,
+
               rendertoolbar: function (statusbar) {
                     // appends buttons to the status bar.
                     var container = $("<div style='margin:5px;'></div>");
                     var viewButton = $("<div class='ui  tiny blue button'> Ver detalles</div>");
                     var listButton = $("<div class='ui tiny blue button'>Listado PDF</div>");
-                    var initButton = $("<div class='ui tiny green button'>Iniciar Mantto</div>");
-                    var finishButton = $("<div class='ui tiny orange button'>Finalizar mantto</div>");
+                    var initButton = $("<div class='ui tiny green disabled button iniciar'>Iniciar Mantto</div>");
+                    var finishButton = $("<div class='ui tiny orange disabled button terminar'>Finalizar mantto</div>");
+
                    
                     container.append(viewButton);
                     container.append(listButton);
@@ -160,36 +186,141 @@ $(document).ready(function() {
                       var id = $("#jqxgrid").jqxGrid('getrowid', selectedrowindex);
                       var win = window.open('/inventario/dispositivos/detalle/'+id, '_blank');
                       win.focus(); 
-                        //$("#jqxgrid").jqxGrid('addrow', null, datarow[0]);
                     });
                     // list selected row.
                     listButton.click(function (event) {
-                        //$("#jqxgrid").jqxGrid('deleterow', id);
                       var win = window.open('/inventario/dispositivos/reporte/listado/',
                        '_blank');
                       win.focus(); 
                     });
                     initButton.click(function (event) {
-
-                        $.ajax({
-                          url: '/api/mantto/planes/',
+                      var selectedrowindex = $("#jqxgrid").jqxGrid('getselectedrowindex');
+                      var row_id = $("#jqxgrid").jqxGrid('getrowid', selectedrowindex);
+                      var hoy = moment().format("YYYY-MM-DD HH:mm");
+                      $('.dimmer').toggleClass('active');
+                      
+                      $.ajax({
+                          url: '/api/mantto/planes/'+row_id,
                           type: 'PUT',
                           dataType: 'json',
-                          data: {id: 1, activo:false},
+                          data: { 
+                            estado:2,
+                            inicio: hoy
+                          },
                         })
-                        .done(function() {
-                          console.log("success");
+                        .done(function(data) {
+                          $('.dimmer').toggleClass('active');
+                          $('.terminar').removeClass('disabled')
+                          $('.iniciar').addClass('disabled');
+                          $('#jqxgrid').jqxGrid('updaterow', row_id, data);
+                          $.snackbar({content: "<i class='ion-android-checkmark-circle green icon'></i> El perdiodo para el Mantto. seleccionado fue iniciado!"});
                         })
                         .fail(function(err) {
-                          console.log("error");
-                          console.log(err)
+                          $.snackbar({content: "<i class='ion-android-warning red icon'></i> Error "+ err.status + ": "+err.statusText});
+                          $('.dimmer').toggleClass('active');
                         })
-
-
                     });
-                },
-            });
+                    finishButton.click(function (event) {
+                      var selectedrowindex = $("#jqxgrid").jqxGrid('getselectedrowindex');
+                      var row_id = $("#jqxgrid").jqxGrid('getrowid', selectedrowindex);
+                      var hoy = moment().format("YYYY-MM-DD HH:mm");
+                      $('.dimmer').toggleClass('active');
+                      
+                      $.ajax({
+                          url: '/api/mantto/planes/'+row_id,
+                          type: 'PUT',
+                          dataType: 'json',
+                          data: { 
+                            estado:4,
+                            fin: hoy
+                          },
+                        })
+                        .done(function(data) {
+                          $('.dimmer').toggleClass('active');
+                          $('.terminar').addClass('disabled')
+                          $('.iniciar').addClass('disabled');
+                          $('#jqxgrid').jqxGrid('updaterow', row_id, data);
+                          $.snackbar({content: "<i class='ion-android-checkmark-circle green icon'></i> El perdiodo para el Mantto. seleccionado fue finalizado!"});
+                        })
+                        .fail(function(err) {
+                          $.snackbar({content: "<i class='ion-android-warning red icon'></i> Error "+ err.status + ": "+err.statusText});
+                          $('.dimmer').toggleClass('active');
+                        })
+                    });
 
+                },
+        });
+
+$('#jqxgrid').on('rowselect', function (event) 
+{
+
+    var args = event.args;
+    var rowBoundIndex = args.rowindex;
+    var rowData = args.row;
+    if(rowData.estado===2){
+      $('.iniciar').addClass('disabled')
+      $('.terminar').removeClass('disabled')
+    }
+    else if(rowData.estado===4 || rowData.estado===5){
+      $('.iniciar, .terminar').addClass('disabled')
+    }
+    else{
+      $('.iniciar').removeClass('disabled')
+      $('.terminar').addClass('disabled')
+    }
+});
+
+
+   // create context menu
+      var contextMenu = $("#Menu").jqxMenu({ width: 200, autoOpenPopup: false, mode: 'popup'});
+  //evitar el menu contextual del navegador
+      $("#jqxgrid").on('contextmenu', function () {
+          return false;
+      });
+
+     // handle context menu clicks.
+      $("#Menu").on('itemclick', function (event) {
+                  //var args = event.args;
+                 // menu_id = $(args).attr('id')
+              var selectedrowindex = $("#jqxgrid").jqxGrid('getselectedrowindex');
+              var row_id = $("#jqxgrid").jqxGrid('getrowid', selectedrowindex);
+              $('.dimmer').toggleClass('active');
+                      
+              $.ajax({
+                          url: '/api/mantto/planes/'+row_id,
+                          type: 'PUT',
+                          dataType: 'json',
+                          data: { 
+                            estado:5,
+                          },
+              })
+              .done(function(data) {
+                          $('.dimmer').toggleClass('active');
+                          $('.terminar').addClass('disabled')
+                          $('.iniciar').addClass('disabled');
+                          $('#jqxgrid').jqxGrid('updaterow', row_id, data);
+                          $.snackbar({content: "<i class='ion-android-checkmark-circle green icon'></i> El perdiodo para el Mantto. seleccionado fue cancelado!"});
+              })
+              .fail(function(err) {
+                          $.snackbar({content: "<i class='ion-android-warning red icon'></i> Error "+ err.status + ": "+err.statusText});
+                          $('.dimmer').toggleClass('active');
+              })
+      });
+      $("#jqxgrid").on('rowclick', function (event) {
+    
+
+        if (event.args.rightclick ) {
+                      $("#jqxgrid").jqxGrid('selectrow', event.args.rowindex);
+                      var data = $('#jqxgrid').jqxGrid('getrowdata', event.args.rowindex);
+                      if(data.estado===1){
+                      var scrollTop = $(window).scrollTop();
+                      var scrollLeft = $(window).scrollLeft();
+                      contextMenu.jqxMenu('open', parseInt(event.args.originalEvent.clientX) + 5 + scrollLeft, parseInt(event.args.originalEvent.clientY) + 5 + scrollTop);
+                      }
+                      return false;
+        }
+
+      });
     
 });
 
